fix(ribbon): links in inherited attributes not visible

--- a/apps/client/src/widgets/ribbon/style.css
+++ b/apps/client/src/widgets/ribbon/style.css
@@ -355,6 +355,10 @@ body[dir=rtl] .attribute-list-editor {
     max-height: 200px;
     overflow: auto;
     padding: 14px 12px 13px 12px;
+
+    a.reference-link {
+        text-decoration: underline;
+    }
 }
 /* #endregion */
 
